Bug Fix: Changelog description field should not be blank when using integer change numbers. No unit tests failed because the ScriptFile parser was being tested with a different regular expression than the one supplied by the ConfigurationService. Added integration test to exercise everything wired up together (minimal test doubles for database and file system access).

--- a/trunk/DatabaseDeploy.Test/DatabaseDeploy.Test.csproj
+++ b/trunk/DatabaseDeploy.Test/DatabaseDeploy.Test.csproj
@@ -100,7 +100,9 @@
     <Compile Include="Configuration\ConfigurationServiceTests.cs" />
     <Compile Include="Database\BogusDatabaseMock.cs" />
     <Compile Include="Database\DatabaseServiceBaseTests.cs" />
+    <Compile Include="DeploymentServiceIntegrationTests.cs" />
     <Compile Include="DeploymentServiceTests.cs" />
+    <Compile Include="FileManagement\BogusIoProxy.cs" />
     <Compile Include="FileManagement\FileServiceTests.cs" />
     <Compile Include="IoC\ContainerTests.cs" />
     <Compile Include="NullAppender.cs" />
